<resources>
    <string name="app_name">Celebaketion Cakes</string>
    <string name="UserName">"Username "</string>
    <string name="Pass">Password</string>
    <string name="logged">Keep me logged in</string>
    <string name="rem" />
    <string name="rem1">Remember me</string>
    <string name="fpw">Forgot Password ?</string>
    <string name="logButton">Login</string>
    <string name="or">OR</string>
    <string name="lwith">Login With</string>
    <string name="New">New User?</string>
    <string name="Name">Input Name</string>
    <string name="uName">Input Username</string>
    <string name="pass">Input Password</string>
    <string name="cpass">Confirm Password</string>
    <string name="DOB">Input Date Of Birth</string>
    <string name="email">Input Email</string>
    <string name="phone">Input Phone</string>
    <string name="Cuser">Create User</string>
    <string name="Celecakes">Celebektion</string>
    <string name="join">Join</string>
    <string name="Home">Home</string>
    <string name="Del">Delivery</string>
    <string name="von">Contact Us</string>
    <string name="Set">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Prof">Profile</string>
    <string name="Cakes">Cakes</string>
    <string name="AddCake1">Add Cake</string>
    <string name="AddCake">Add Cake</string>
    <string name="AddCake2">Add New Cake</string>
    <string name="Admin">Admin Name</string>
    <string name="Name1">Cake Name</string>
    <string name="CakeType">Cake Type</string>
    <string name="Price">Price</string>
    <string name="dELIVEREDwITHIN">Delivered Within</string>
    <string name="ImgUrl">Image URL</string>
    <string name="RemoveCake">Remove Cake</string>
    <string name="CakeName">PRODUCT</string>
    <string name="KG">Cake Size</string>
    <string name="MSG2">Price</string>
    <string name="MSG4">Message On The Cake</string>
    <string name="Flv">Flavors</string>
    <string name="rs">Rs. </string>
    <string name="sub">Subtotal Rs.</string>
    <string name="btn1">Add To Cart</string>
    <string name="ViewCart">View Cart</string>
    <string name="CakeName1">Cake Name</string>
    <string name="prce">PRICE </string>
    <string name="QtyTot">QUANTITY</string>
    <string name="tot">TOTAL</string>
    <string name="GrandTotal"> GRAND TOTAL</string>
    <string name="Remove">Remove</string>
    <string name="Update">Update</string>
    <string name="cart">CART TOTALS</string>
    <string name="sub1">SUBTOTAL</string>
    <string name="sub2">TOTAL</string>
    <string name="action">ACTION</string>
    <string name="add">ADD</string>
    <string name="cele">CELEBAKETION CAKES</string>
    <string name="View">view</string>
    <string name="Delete">delete</string>
    <string name="AddDelivery">Add New Delivery Address</string>
    <string name="Country" />
    <string name="Country1">Country :0</string>
    <string name="Coun">Country :-</string>
    <string name="Province">Province :-</string>
    <string name="City">City :-</string>
    <string name="Address1">Address Line 1:-</string>
    <string name="Add2">Address Line 2:-</string>
    <string name="Add122">Add Address</string>
    <string name="AddressID">Address ID</string>
    <string name="City1">City</string>
    <string name="pro">Province</string>
    <string name="up">Update</string>
    <string name="CustomerNmae">Customer Name</string>
    <string name="Pdata">Personal Data</string>
    <string name="Fname">First Name:-</string>
    <string name="lnmae">Last Name :-</string>
    <string name="dob">Date Of Birth:-</string>
    <string name="Email">Email :-</string>
    <string name="p1">Phone :-</string>
    <string name="password">Password :-</string>
    <string name="Delete1">Delete Account</string>
    <string name="Edit1">Edit Details</string>
    <string name="up1">Update Profile</string>
    <string name="gt">Grand Total Rs. </string>
    <string name="more">More Details</string>
    <string name="q">Enter Quantity</string>
</resources>