<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_menu"
        android:title="@string/Home"/>
    <item
        android:id="@+id/ViewCart"
        android:icon="@drawable/ic_menu"
        android:title="@string/ViewCart"/>
    <item
        android:id="@+id/navDelivery"
        android:icon="@drawable/ic_menu"
        android:title="@string/Del"/>
    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/ic_menu"
        android:title="@string/Prof"/>
    <item
        android:id="@+id/navContact"
        android:icon="@drawable/ic_menu"
        android:title="@string/von"/>
    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/ic_menu"
        android:title="@string/Set"/>


</menu>